Experiment-Ready Version 1.0 (Todo: Change sensing part into Service that can run in background even when screen is off, Android Activity is paused, etc)

--- a/charm/res/values/strings.xml
+++ b/charm/res/values/strings.xml
@@ -7,5 +7,6 @@
     <string name="SensorDataType">SensorDataType</string>
     <string name="SensorDataValue">SensorDataValue</string>
     <string name="isSensingEnabled">isSensingEnabled</string>
+    <string name="folder_name">charm</string>
 
 </resources>
